--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="css/media-queries.css" />
     <link rel="stylesheet" href="css/all.css" />
-    <link rel="shortcut icon" type="image/jpg" href="img/logo.jpg" />
+    <link rel="shortcut icon" type="image/jpg" href="img/jerry8.jpg" />
     <script src="js/webquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/index.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/script.js" type="text/javascript" charset="utf-8"></script>
