--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta name="keywords" content="Aribidara Jerry" />
-    <meta name="description" content="Aribidara Jerry, a Musician, Teacher, 
+    <meta name="description" content="Aribidara Jerry, a Gospel Musician, Teacher, 
     Composer, Instrumentalist, Web developer...">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aribidara Jerry - Portfolio</title>
