--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta name="keywords" content="Aribidara Jerry" />
-    <meta name="description" content="Aribidara Jerry, a Gospel Musician, Teacher, Composer, Instrumentalist, Web developer...">
+    <meta name="description" content="Aribidara Jerry, a Musician with interest in diverse genres (Gospel, contemporary, classical, jazz), Teacher, Composer, Instrumentalist...">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aribidara Jerry - Portfolio</title>
     <link rel="stylesheet" href="index.css" />
@@ -141,6 +141,18 @@
                 </p>
                 <div class="works">
                     <div>
+                        <img src="img/how-great-is-our-God.jpg" alt="Score image"
+                        >
+                        <div class="links">
+                            <!-- <a href="" target="_blank">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a> -->
+                            <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1674853/Product.aspx" target="_blank">
+                                <i class="fa-solid fa-external-link"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div>
                         <img src="img/waltz-in-e-minor.jpg" alt="Score image"
                         >
                         <div class="links">
@@ -149,18 +161,6 @@
                                 <i class="fa-brands fa-youtube"></i>
                             </a> -->
                             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1678453/Product.aspx" target="_blank">
-                                <i class="fa-solid fa-external-link"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div>
-                        <img src="img/how-great-is-our-God.jpg" alt="Score image"
-                        >
-                        <div class="links">
-                            <!-- <a href="" target="_blank">
-                                <i class="fa-brands fa-youtube"></i>
-                            </a> -->
-                            <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1674853/Product.aspx" target="_blank">
                                 <i class="fa-solid fa-external-link"></i>
                             </a>
                         </div>
