--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="keywords" content="Aribidara Jerry" />
     <meta name="description" content="Aribidara Jerry is a Musician, Teacher, Composer, Instrumentalist...">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="img/logo.jpg" />
     <title>Aribidara Jerry - Portfolio</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="css/media-queries.css" />
