--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta name="keywords" content="Aribidara Jerry" />
-    <meta name="description" content="Aribidara Jerry is a Musician, Teacher, Composer, Instrumentalist...">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="img/jerry8.jpg" />
+    <meta name="description" content="Aribidara Jerry, a Musician with interest in diverse genres (Gospel, contemporary, classical, jazz), Teacher, Composer, Instrumentalist...">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Aribidara Jerry - Portfolio</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="css/media-queries.css" />
@@ -191,30 +190,6 @@
                         </div>
                     </div>
                     <div>
-                        <img src="img/waltz-in-c-sharp.jpg" alt="Score image"
-                        >
-                        <div class="links">
-                            <!-- <a href="" target="_blank">
-                                <i class="fa-brands fa-youtube"></i>
-                            </a> -->
-                            <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx" target="_blank">
-                                <i class="fa-solid fa-external-link"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div>
-                        <img src="img/gavotte.jpg" alt="Score image"
-                        >
-                        <div class="links">
-                            <!-- <a href="" target="_blank">
-                                <i class="fa-brands fa-youtube"></i>
-                            </a> -->
-                            <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591225/Product.aspx" target="_blank">
-                                <i class="fa-solid fa-external-link"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div>
                         <img src="img/moment.jpg" alt="Score image"
                         >
                         <div class="links">
@@ -234,6 +209,30 @@
                                 <i class="fa-brands fa-youtube"></i>
                             </a> -->
                             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521403/Product.aspx" target="_blank">
+                                <i class="fa-solid fa-external-link"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="img/waltz-in-c-sharp.jpg" alt="Score image"
+                        >
+                        <div class="links">
+                            <!-- <a href="" target="_blank">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a> -->
+                            <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx" target="_blank">
+                                <i class="fa-solid fa-external-link"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="img/gavotte.jpg" alt="Score image"
+                        >
+                        <div class="links">
+                            <!-- <a href="" target="_blank">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a> -->
+                            <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591225/Product.aspx" target="_blank">
                                 <i class="fa-solid fa-external-link"></i>
                             </a>
                         </div>
@@ -276,7 +275,7 @@
                     </div>
                 </div>
                 <p class="content">
-                    You will find more of my documented composition on <a href="https://www.sheetmusicdirect.com/en-US/Search.aspx?query=Aribidara%2BJerry" target="_blank"><cite><i>SHEETMUSICDIRECT</i></cite></a>.
+                    You will find more of my documented composition on <a href="https://www.sheetmusicdirect.com/en-US/Search.aspx?query=Aribidara%2BJerry" target="_blank"><cite><i>SHEETMUSICDIRECT</i></cite></a>. Please note that I have previously published works under the name A.T.M.F. Jerry. Moving forward, all works will be attributed to Aribidara Jerry for consistency. Both names refer to the same creator.
                 </p>
             </div>
         </article>
@@ -333,7 +332,7 @@
     </section>
     <footer>
         Copyright &copy;
-        <p></p> A.T.M.F. JERRY
+        <p></p> ARIBIDARA JERRY
     </footer>
 </body>
 </html>
