--- a/index.html
+++ b/index.html
@@ -156,10 +156,9 @@
                         <img src="img/waltz-in-e-minor.jpg" alt="Score image"
                         >
                         <div class="links">
-                            <!-- Will be updated once Youtube video is created -->
-                            <!-- <a href="" target="_blank">
+                            <a href="https://youtu.be/2oUMq5lJ9jw?si=iWJPJrMzwnHSa3g3" target="_blank">
                                 <i class="fa-brands fa-youtube"></i>
-                            </a> -->
+                            </a>
                             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1678453/Product.aspx" target="_blank">
                                 <i class="fa-solid fa-external-link"></i>
                             </a>
@@ -169,9 +168,9 @@
                         <img src="img/waltz-in-f-minor.jpg" alt="Score image"
                         >
                         <div class="links">
-                            <!-- <a href="" target="_blank">
+                            <a href="https://youtu.be/LgLarEpQke0?si=e9BpTCgupFlG5GHf" target="_blank">
                                 <i class="fa-brands fa-youtube"></i>
-                            </a> -->
+                            </a>
                             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1673648/Product.aspx" target="_blank">
                                 <i class="fa-solid fa-external-link"></i>
                             </a>
@@ -181,9 +180,9 @@
                         <img src="img/musical-moment-1.jpg" alt="Score image"
                         >
                         <div class="links">
-                            <!-- <a href="" target="_blank">
+                            <a href="https://youtu.be/YBN1T56FHbE?si=IT6n47kyFVrx5DxI" target="_blank">
                                 <i class="fa-brands fa-youtube"></i>
-                            </a> -->
+                            </a>
                             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1673645/Product.aspx" target="_blank">
                                 <i class="fa-solid fa-external-link"></i>
                             </a>
@@ -193,9 +192,9 @@
                         <img src="img/moment.jpg" alt="Score image"
                         >
                         <div class="links">
-                            <!-- <a href="" target="_blank">
+                            <a href="https://youtu.be/FUJeC74TGIc?si=K6mQCR8Fjhx1e1oh" target="_blank">
                                 <i class="fa-brands fa-youtube"></i>
-                            </a> -->
+                            </a>
                             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521416/Product.aspx" target="_blank">
                                 <i class="fa-solid fa-external-link"></i>
                             </a>
@@ -205,9 +204,9 @@
                         <img src="img/invention.jpg" alt="Score image"
                         >
                         <div class="links">
-                            <!-- <a href="" target="_blank">
+                            <a href="https://youtu.be/jlROzN9nws8?si=eQAaMhBWul9yxT4y" target="_blank">
                                 <i class="fa-brands fa-youtube"></i>
-                            </a> -->
+                            </a>
                             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521403/Product.aspx" target="_blank">
                                 <i class="fa-solid fa-external-link"></i>
                             </a>
