--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                 Welcome to my video showcase! Here, you'll find a selection of my performances, highlighting my skills as an instrumentalist. From classical masterpieces to contemporary works, I'm excited to share my musical interpretations with you. Explore the videos below to experience my passion for music.
                 </p>
                 <div style="display: flex; flex-direction: column; align-items: center;">
+                    <iframe src="https://www.youtube.com/embed/pzhfY4gzaNw?si=kegQTcyNfhzeql64"><!--Sunday ministration--></iframe>
                     <iframe src="https://youtube.com/embed/VN8rN0hLrZM?playlist=VN8rN0hLrZM&loop=1"><!--Bach prelude in c minor--></iframe>
                     <iframe src="https://youtube.com/embed/jPxaSGVwueA?=1&playlist=jPxaSGVwueA&loop=1"><!--Rachmaninoff momenta musicaux--></iframe>
                     <iframe src="https://youtube.com/embed/EWUs8we7eMs?=1&playlist=EWUs8we7eMs&loop=1"><!--Minuet in B minor--></iframe>
