--- a/index.html
+++ b/index.html
@@ -119,23 +119,6 @@
             <h2 id="works" class="topic">Works</h2>
             <div class="line"></div>
             <div class="center">
-                <h3 id="video">Videos</h3>
-                <p class="content">
-                Welcome to my video showcase! Here, you'll find a selection of my performances, highlighting my skills as an instrumentalist. From classical masterpieces to contemporary works, I'm excited to share my musical interpretations with you. Explore the videos below to experience my passion for music.
-                </p>
-                <div style="display: flex; flex-direction: column; align-items: center;">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/w9G6V5QGeLg?si=H22QfDAydNYvSuDQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><!--He set me free... Sunday ministration-->
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/pzhfY4gzaNw?si=kegQTcyNfhzeql64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen><!--Sunday ministration--></iframe>
-                    <iframe width="560" height="315" src="https://youtube.com/embed/VN8rN0hLrZM?playlist=VN8rN0hLrZM&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen><!--Bach prelude in c minor--></iframe>
-                    <iframe width="560" height="315" src="https://youtube.com/embed/jPxaSGVwueA?=1&playlist=jPxaSGVwueA&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen><!--Rachmaninoff momenta musicaux--></iframe>
-                    <iframe width="560" height="315" src="https://youtube.com/embed/EWUs8we7eMs?=1&playlist=EWUs8we7eMs&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen><!--Minuet in B minor--></iframe>
-                    <iframe width="560" height="315" src="https://youtube.com/embed/%5N4-vU0eKns?=1&playlist=5N4-vU0eKns&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen><!--Chopin minuet waltz--></iframe>
-                </div>
-                <p class="content">
-                    You can visit my YouTube channel for additional performances and music content by clicking <a href="https://www.youtube.com/@aribidarajerry7889" target="_blank"><i class="fa-brands fa-youtube"></i>Aribidara Jerry</a>.
-                </p>
-            </div>
-            <div class="center">
                 <h3 class="sub-topic">Compositions</h3>
                 <p class="content">
                 Discover my musical creations, featuring a collection of videos and original compositions. Explore the intersection of sound and vision, and experience the depth of my artistic expression.
@@ -276,6 +259,24 @@
                 </div>
                 <p class="content">
                     You will find more of my documented composition on <a href="https://www.sheetmusicdirect.com/en-US/Search.aspx?query=Aribidara%2BJerry" target="_blank"><cite><i>SHEETMUSICDIRECT</i></cite></a>. Please note that I have previously published works under the name A.T.M.F. Jerry. Moving forward, all works will be attributed to Aribidara Jerry for consistency. Both names refer to the same creator.
+                </p>
+            </div>
+            <div class="center">
+                <h3 id="video">Videos</h3>
+                <p class="content">
+                Welcome to my video showcase! Here, you'll find a selection of my performances, highlighting my skills as an instrumentalist. From classical masterpieces to contemporary works, I'm excited to share my musical interpretations with you. Explore the videos below to experience my passion for music.
+                </p>
+                <div style="display: flex; flex-direction: column; align-items: center;">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/2XQ-uHfG0HA?si=65-td0zfz-aPKbTV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen><!-- Bass and Lead guitarist all in one --></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/w9G6V5QGeLg?si=H22QfDAydNYvSuDQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen><!--He set me free... Sunday ministration--></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/pzhfY4gzaNw?si=kegQTcyNfhzeql64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen><!--Sunday ministration--></iframe>
+                    <iframe width="560" height="315" src="https://youtube.com/embed/VN8rN0hLrZM?playlist=VN8rN0hLrZM&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen><!--Bach prelude in c minor--></iframe>
+                    <iframe width="560" height="315" src="https://youtube.com/embed/jPxaSGVwueA?=1&playlist=jPxaSGVwueA&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen><!--Rachmaninoff momenta musicaux--></iframe>
+                    <iframe width="560" height="315" src="https://youtube.com/embed/EWUs8we7eMs?=1&playlist=EWUs8we7eMs&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen><!--Minuet in B minor--></iframe>
+                    <iframe width="560" height="315" src="https://youtube.com/embed/%5N4-vU0eKns?=1&playlist=5N4-vU0eKns&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen><!--Chopin minuet waltz--></iframe>
+                </div>
+                <p class="content">
+                    You can visit my YouTube channel for additional performances and music content by clicking <a href="https://www.youtube.com/@aribidarajerry7889" target="_blank"><i class="fa-brands fa-youtube"></i>Aribidara Jerry</a>.
                 </p>
             </div>
         </article>
