updated UI, more responsive

--- a/index.html
+++ b/index.html
@@ -18,93 +18,68 @@
     </script>
 </head>
 <body onload="displayCode()">
-    <div class="nav-bar" id="home">
-        <h1 id="logo" onclick="fullName()" title="Click to see fullname">A.T.M.F. JERRY</h1>
+    <div class="nav-bar">
+        <div class="logo">
+            <h1 id="logo" onclick="fullName()" title="Click to see fullname">A.T.M.F. JERRY</h1>
+        </div>
         <i class="fa-solid fa-bars"></i>
-        <div class="close">
-            <i class="fa-solid fa-close"></i>
-        </div>
+        <nav>
+            <ul>
+                <a href="#home">
+                    <li>
+                        Home
+                    </li>
+                </a>
+                <a href="#about">
+                    <li>
+                        About
+                    </li>
+                </a>
+                <a href="#works">
+                    <li>
+                        Works
+                    </li>
+                </a>
+                <a href="#contact">
+                    <li>
+                        Contact
+                    </li>
+                </a>
+            </ul>
+            
+            <button id="subscribe">Subscribe</button>
+
+            <div class="contact">
+                <a href="https://wa.me/+2348123998572" target="_blank">
+                    <i class="fa-brands fa-whatsapp fa-1x"></i>
+                </a>
+                <a href="https://facebook.com/aribidarajerry" target="_blank">
+                    <i class="fa-brands fa-facebook fa-1x"></i>
+                </a>
+                <a href="https://github.com/aribidarajerry" target="_blank">
+                    <i class="fa-brands fa-github fa-1x"></i>
+                </a>
+                <a href="https://t.me/aribidarajerry" target="_blank">
+                    <i class="fa-brands fa-telegram fa-1x"></i>
+                </a>
+                <a href="mailto:aribidarajerry@gmail.com?subject=Enquiry" target="_blank">
+                    <i class="fa-solid fa-envelope fa-1x"></i>
+                </a>
+            </div>
+        </nav>
     </div>
-    <nav>
-        <ul>
-            <a href="#home">
-                <li>
-                    Home
-                </li>
-            </a>
-            <a href="#about">
-                <li>
-                    About
-                </li>
-            </a>
-            <a href="#works">
-                <li>
-                    Works
-                </li>
-            </a>
-            <a href="#contact">
-                <li>
-                    Contact
-                </li>
-            </a>
-        </ul>
-        
-        <button id="subscribe">Subscribe</button>
-
-        <div class="contact">
-            <a href="https://wa.me/+2348123998572" target="_blank">
-                <i class="fa-brands fa-whatsapp fa-1x"></i>
-            </a>
-            <a href="https://facebook.com/aribidarajerry" target="_blank">
-                <i class="fa-brands fa-facebook fa-1x"></i>
-            </a>
-            <a href="https://github.com/aribidarajerry" target="_blank">
-                <i class="fa-brands fa-github fa-1x"></i>
-            </a>
-            <a href="https://t.me/aribidarajerry" target="_blank">
-                <i class="fa-brands fa-telegram fa-1x"></i>
-            </a>
-            <a href="mailto:aribidarajerry@gmail.com?subject=Enquiry" target="_blank">
-                <i class="fa-solid fa-envelope fa-1x"></i>
-            </a>
+    <!-- background-color: gainsboro; -->
+    <section style="background-color: ivory;" id="home">
+        <div class="animate">
+            <div class="cv">
+                <button id="cv">
+                    Download CV
+                </button>
+                <button id="projects">
+                    My Projects
+                </button>
+            </div>
         </div>
-    </nav>
-    <section>
-        <div class="img-display">
-            <img src="" alt="" class="display">
-        </div>
-        <div class="images">
-            <!-- <img src="img/jerry1.jpg" alt="">
-            <img src="img/jerry2.jpg" alt="">
-            <img src="img/jerry3.jpg" alt="">
-            <img src="img/jerry4.jpg" alt="">
-            <img src="img/jerry5.jpg" alt="">
-            <img src="img/jerry6.jpg" alt="">
-            <img src="img/jerry7.jpg" alt="">
-            <img src="img/jerry8.jpg" alt="">
-            <img src="img/jerry9.jpg" alt="">
-            <img src="img/jerry10.jpg" alt="">
-            <img src="img/jerry11.jpg" alt="">
-            <img src="img/jerry12.jpg" alt="">
-            <img src="img/jerry13.jpg" alt="">
-            <img src="img/jerry14.jpg" alt="">
-            <img src="img/jerry15.jpg" alt="">
-            <img src="img/jerry16.jpg" alt="">
-            <img src="img/jerry17.jpg" alt="">
-            <img src="img/jerry18.jpg" alt="">
-            <img src="img/jerry19.jpg" alt="">
-            <img src="img/jerry20.jpg" alt="">
-            <img src="img/jerry21.jpg" alt=""> -->
-        </div>
-        <div class="cv">
-            <button id="cv">
-                Download CV
-            </button>
-            <button id="projects">
-                My Projects
-            </button>
-        </div>
-
         <article class="article-1">
             <h2 id="about">About</h2>
             <div class="line"></div>
