--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Aribidara Jerry, a Musician with interest in diverse genres (Gospel, contemporary, classical, jazz), Teacher, Composer, Instrumentalist...">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta property="og:image" content="https://aribidarajerry.github.io/img/jerry1.jpg" />
-    <title>Aribidara Jerry - Portfolio</title>
+    <title>Aribidara Jerry | Musician & Web Developer</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="css/media-queries.css" />
     <link rel="stylesheet" href="css/all.css" />
