--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="js/index.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/script.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" charset="utf-8">
-        window.location.href = "https://aribidarajerry.onrender.com"
+<!--        window.location.href = "https://aribidarajerry.onrender.com"-->
     </script>
 </head>
 <body onload="displayCode()">
