--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:image" content="https://aribidarajerry.github.io/image/bg1.jpg" />
+  <meta property="og:image" content="https://aribidarajerry.github.io/img/bg1.jpg" />
   <meta name="description" content="Hello! I'm Aribidara Jerry, a multifaceted individual with a passion for teaching, music, and technology.">
   <title>Aribidara Jerry | Musician & Web Developer</title>
   <link rel="shortcut icon" type="image/jpg" href="img/jerry.jpg" />
