--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h2>About Me</h2>
     <div class="about">
       <div class="img">
-        <img src="img/bg3.jpg" alt="">
+        <img src="img/jerry3.jpg" alt="">
         <div class="social-links">
           <a href="https://facebook.com/aribidarajerry">
             <i class="fa-brands fa-facebook"></i>
@@ -319,14 +319,14 @@
     <p class="content"></p>
     <div class="infinite-slider-wrapper">
       <div class="infinite-slider-track">
-        <img src="img/bg1.jpg" alt="" class="slider-img">
-          <img src="img/bg2.jpg" alt="" class="slider-img">
-          <img src="img/bg3.jpg" alt="" class="slider-img">
-          <img src="img/bg5.jpg" alt="" class="slider-img">
-          <img src="img/bg6.jpg" alt="" class="slider-img">
-          <img src="img/bg7.jpg" alt="" class="slider-img">
-          <img src="img/bg8.jpg" alt="" class="slider-img">
-          <img src="img/bg9.jpg" alt="" class="slider-img">
+        <img src="img/jerry1.jpg" alt="" class="slider-img">
+          <img src="img/jerry2.jpg" alt="" class="slider-img">
+          <img src="img/jerry3.jpg" alt="" class="slider-img">
+          <img src="img/jerry5.jpg" alt="" class="slider-img">
+          <img src="img/jerry6.jpg" alt="" class="slider-img">
+          <img src="img/jerry7.jpg" alt="" class="slider-img">
+          <img src="img/jerry8.jpg" alt="" class="slider-img">
+          <img src="img/jerry9.jpg" alt="" class="slider-img">
       </div>
     </div>
   </section>
