--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
       <div class="img">
         <img src="img/bg3.jpg" alt="">
         <div class="social-links">
-          <a href="https://facebook.com/aribidarajerry">
+          <a href="https://facebook.com/aribidara.jerry">
             <i class="fa-brands fa-facebook"></i>
           </a>
-          <!-- <a href="https://www.instagram.com/musicforlife76/">
+          <a href="https://www.instagram.com/aribidara.jerry/">
             <i class="fa-brands fa-instagram"></i>
-          </a> -->
-          <a href="https://x.com/AribidaraJ65504">
-            <i class="fa-brands fa-x-twitter"></i>
           </a>
+          <!-- <a href="https://x.com/AribidaraJ65504">
+            <i class="fa-brands fa-x-twitter"></i>
+          </a> -->
           <a href="https://www.youtube.com/@aribidarajerry">
             <i class="fa-brands fa-youtube"></i>
           </a>
