--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:image" content="https://aribidarajerry.github.io/img/jerry.jpg" />
+  <meta property="og:image" content="https://aribidarajerry.github.io/img/jerry11.jpg" />
   <meta name="description" content="Hello! I'm Aribidara Jerry, a multifaceted individual with a passion for teaching, music, and technology.">
   <title>Aribidara Jerry | Musician & Web Developer</title>
   <link rel="shortcut icon" type="image/jpg" href="img/jerry.jpg" />
@@ -47,17 +47,17 @@
     <h2>About Me</h2>
     <div class="about">
       <div class="img">
-        <img src="img/bg3.jpg" alt="">
+        <img src="img/jerry8.jpg" alt="Aribidara Jerry">
         <div class="social-links">
-          <a href="https://facebook.com/aribidara.jerry">
+          <a href="https://facebook.com/aribidarajerry">
             <i class="fa-brands fa-facebook"></i>
           </a>
-          <a href="https://www.instagram.com/aribidara.jerry/">
+          <!-- <a href="https://www.instagram.com/musicforlife76/">
             <i class="fa-brands fa-instagram"></i>
-          </a>
-          <!-- <a href="https://x.com/AribidaraJ65504">
-            <i class="fa-brands fa-x-twitter"></i>
           </a> -->
+          <a href="https://x.com/AribidaraJ65504">
+            <i class="fa-brands fa-x-twitter"></i>
+          </a>
           <a href="https://www.youtube.com/@aribidarajerry">
             <i class="fa-brands fa-youtube"></i>
           </a>
@@ -97,7 +97,7 @@
     <div class="row">
       <!-- <div class="col-sm-6 music">
         <div class="row">
-          <img class="col-sm-6" src="img/stay-with-him.jpg" alt="">
+          <img class="col-sm-6" src="img/stay-with-him.jpg" alt="Stay with Him">
           <div class="col-sm-6 music-links">
             <a href="">
               <i class="fa-solid fa-external-link"></i> Pdf Score
@@ -113,7 +113,8 @@
       </div> -->
       <div class="col-sm-6 music">
         <div class="row">
-          <img class="col-sm-6" src="img/musical-moment-2.jpg" alt="">
+          <img class="col-sm-6" src="img/musical-moment-2.jpg" alt="Momenta musicaux No. 2
+">
           <div class="col-sm-6 music-links">
             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1761062/Product.aspx">
               <i class="fa-solid fa-external-link"></i> Pdf Score
@@ -129,7 +130,7 @@
       </div>
       <!-- <div class="col-sm-6 music">
         <div class="row">
-          <img class="col-sm-6" src="img/how-great-is-our-God.jpg" alt="">
+          <img class="col-sm-6" src="img/how-great-is-our-God.jpg" alt="How great is our God">
           <div class="col-sm-6 music-links">
             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1674853/Product.aspx">
               <i class="fa-solid fa-external-link"></i> Pdf Score
@@ -145,7 +146,7 @@
       </div> -->
       <div class="col-sm-6 music">
         <div class="row">
-          <img class="col-sm-6" src="img/musical-moment-1.jpg" alt="">
+          <img class="col-sm-6" src="img/musical-moment-1.jpg" alt="Momenta musicaux No. 1">
           <div class="col-sm-6 music-links">
             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1673645/Product.aspx">
               <i class="fa-solid fa-external-link"></i> Pdf Score
@@ -161,7 +162,7 @@
       </div>
       <!-- <div class="col-sm-6 music">
         <div class="row">
-          <img class="col-sm-6" src="img/gavotte.jpg" alt="">
+          <img class="col-sm-6" src="img/gavotte.jpg" alt="Gavotte">
           <div class="col-sm-6 music-links">
             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591225/Product.aspx">
               <i class="fa-solid fa-external-link"></i> Pdf Score
@@ -177,7 +178,7 @@
       </div> -->
       <div class="col-sm-6 music">
         <div class="row">
-          <img class="col-sm-6" src="img/moment.jpg" alt="">
+          <img class="col-sm-6" src="img/moment.jpg" alt="The moment">
           <div class="col-sm-6 music-links">
             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521416/Product.aspx">
               <i class="fa-solid fa-external-link"></i> Pdf Score
@@ -193,7 +194,7 @@
       </div>
       <!-- <div class="col-sm-6 music">
         <div class="row">
-          <img class="col-sm-6" src="img/trio.jpg" alt="">
+          <img class="col-sm-6" src="img/trio.jpg" alt="Trio for strings">
           <div class="col-sm-6 music-links">
             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521415/Product.aspx">
               <i class="fa-solid fa-external-link"></i> Pdf Score
@@ -209,7 +210,7 @@
       </div> -->
       <!-- <div class="col-sm-6 music">
         <div class="row">
-          <img class="col-sm-6" src="img/waltz-in-c-sharp.jpg" alt="">
+          <img class="col-sm-6" src="img/waltz-in-c-sharp.jpg" alt="Waltz in C#">
           <div class="col-sm-6 music-links">
             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx">
               <i class="fa-solid fa-external-link"></i> Pdf Score
@@ -225,7 +226,7 @@
       </div> -->
       <div class="col-sm-6 music">
         <div class="row">
-          <img class="col-sm-6" src="img/waltz-in-e-minor.jpg" alt="">
+          <img class="col-sm-6" src="img/waltz-in-e-minor.jpg" alt="Waltz in E minor">
           <div class="col-sm-6 music-links">
             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1678453/Product.aspx">
               <i class="fa-solid fa-external-link"></i> Pdf Score
@@ -241,7 +242,7 @@
       </div>
       <div class="col-sm-6 music">
         <div class="row">
-          <img class="col-sm-6" src="img/waltz-in-f-minor.jpg" alt="">
+          <img class="col-sm-6" src="img/waltz-in-f-minor.jpg" alt="Waltz in F minor">
           <div class="col-sm-6 music-links">
             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1673648/Product.aspx">
               <i class="fa-solid fa-external-link"></i> Pdf Score
@@ -257,7 +258,7 @@
       </div>
       <div class="col-sm-6 music">
         <div class="row">
-          <img class="col-sm-6" src="img/invention.jpg" alt="">
+          <img class="col-sm-6" src="img/invention.jpg" alt="Invention No. 1">
           <div class="col-sm-6 music-links">
             <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521403/Product.aspx">
               <i class="fa-solid fa-external-link"></i> Pdf Score
@@ -319,14 +320,18 @@
     <p class="content"></p>
     <div class="infinite-slider-wrapper">
       <div class="infinite-slider-track">
-        <img src="img/bg1.jpg" alt="" class="slider-img">
-          <img src="img/bg2.jpg" alt="" class="slider-img">
-          <img src="img/bg3.jpg" alt="" class="slider-img">
-          <img src="img/bg5.jpg" alt="" class="slider-img">
-          <img src="img/bg6.jpg" alt="" class="slider-img">
-          <img src="img/bg7.jpg" alt="" class="slider-img">
-          <img src="img/bg8.jpg" alt="" class="slider-img">
-          <img src="img/bg9.jpg" alt="" class="slider-img">
+        <img src="img/jerry12.jpg" alt="Aribidara Jerry" class="slider-img">
+          <img src="img/jerry11.jpg" alt="Aribidara Jerry" class="slider-img">
+          <img src="img/jerry10.jpg" alt="Aribidara Jerry" class="slider-img">
+          <img src="img/jerry9.jpg" alt="Aribidara Jerry" class="slider-img">
+          <img src="img/jerry8.jpg" alt="Aribidara Jerry" class="slider-img">
+          <img src="img/jerry7.jpg" alt="Aribidara Jerry" class="slider-img">
+          <img src="img/jerry6.jpg" alt="Aribidara Jerry" class="slider-img">
+          <img src="img/jerry5.jpg" alt="Aribidara Jerry" class="slider-img">
+	  <img src="img/jerry4.jpg" alt="Aribidara Jerry" class="slider-img">
+          <img src="img/jerry3.jpg" alt="Aribidara Jerry" class="slider-img">
+          <img src="img/jerry2.jpg" alt="Aribidara Jerry" class="slider-img">
+          <img src="img/jerry1.jpg" alt="Aribidara Jerry" class="slider-img">
       </div>
     </div>
   </section>
